--- a/style.css
+++ b/style.css
@@ -1,14 +1,78 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Inter, sans-serif;
+}
+
+.logo {
+    flex-grow: 1;
 }
 
 nav {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    flex-grow: 1;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 0%;
+    text-decoration: none;
+    color: white;
+    position: relative;
+    transition: 0.5s ease 0s, left 0.5s ease 0s;
+}
+
+nav a:hover {
+    text-decoration: none;
+    /* Remove default underline */
+}
+
+nav a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    /* Adjust the distance of the underline from the text */
+    width: 100%;
+    height: 2px;
+    /* Adjust the thickness of the underline */
+    background-color: white;
+    /* Set the color of the underline */
+    visibility: hidden;
+    /* Initially hide the underline */
+    transform: scaleX(0);
+    /* Initially scale the underline to 0 */
+    transition: all 0.3s ease;
+    /* Add a smooth transition effect */
+}
+
+nav a:hover::after {
+    visibility: visible;
+    /* Show the underline on hover */
+    transform: scaleX(1);
+    /* Scale the underline to full width on hover */
+}
+
+#check {
+    display: none;
+}
+
+/* nav {
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    /* border: 2px solid black; */
+    border: 2px solid black; 
     height: 8.5vh;
     background-color: black;
     width: 80%;
@@ -23,7 +87,7 @@ header {
 nav ul {
 
     color: white;
-    /* border: 2px solid white; */
+    border: 2px solid white; 
     list-style-type: none;
     display: flex;
     justify-content: space-evenly;
@@ -38,26 +102,139 @@ li {
     text-align: center;
     text-transform: uppercase;
     font-size: 10pt;
+} */
+
+
+.header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 12vh;
+    padding-left: 10%;
+    padding-right: 10%;
+    background: rgb(24, 24, 24);
+    z-index: 100;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    box-shadow: 10px 5px 20px 1px black;
+    /* border-bottom: 0.1px solid white; */
+
 }
 
-.logo {
+.icons {
+    position: absolute;
+    font-size: 2.5rem;
     color: white;
-    /* border: 2px solid white; */
+    cursor: pointer;
+    display: none;
+    right: 5%;
+}
+
+/* .logo {
+    color: white;
+    border: 2px solid white; 
     flex-grow: 1;
     text-align: center;
-    /* font-size: 20px; */
+    font-size: 20px; 
     align-content: center;
     justify-content: center;
     padding: 0;
     line-height: 3;
-}
+} */
+
+
+
+
+
 
 .c-item {
-    height: 91.5vh;
+    height: 100vh;
 }
 
 .c-img {
     height: 100%;
     object-fit: cover;
     filter: brightness(0.6);
+}
+
+.container {
+    width: 10%;
+}
+
+.black {
+    background-color: black;
+}
+
+
+@media (max-width:1000px) {
+    nav a {
+        text-transform: uppercase;
+        color: white;
+        text-decoration: none;
+        font-weight: 500;
+        margin-left: 4%;
+    }
+}
+
+@media (max-width:800px) {
+    .icons {
+        display: inline-flex;
+    }
+
+    .icons #close-icon {
+        display: none;
+    }
+
+    #check:checked~.icons #menu-icon {
+        display: none;
+    }
+
+    #check:checked~.icons #close-icon {
+        display: block;
+    }
+
+    nav {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 0vh;
+        background-color: black;
+        z-index: 100;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transition: .3s ease;
+
+    }
+
+    nav a {
+        display: none;
+
+    }
+
+    #check:checked~nav a {
+        padding-top: 5%;
+        font-size: 150%;
+        display: block;
+    }
+
+    #check:checked~nav {
+        height: 88vh;
+    }
+
+    /* nav a {
+        padding-top: 5%;
+        font-size: 150%;
+    } */
+
+    nav a:first-child {
+        padding-top: 0%;
+    }
+
+
 }
