--- a/main_style.css
+++ b/main_style.css
@@ -1,79 +1,235 @@
 body{
-    margin:0;
-    font-family: 'Lucida Sans', sans-serif ;
-    background-color: black
+  margin:0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(12, 11, 11) !important;
+  min-height: 100%;
+  
 }
 
 :root{
-    font-size: 10px;
+  font-size: 10px;
 }
 
-div.container{
-    background-color: black;
-    max-width: 100%;
-    height: 8em;
-    margin-left:0;
-    margin-right:0;
-    
+.seperator{
+  width: 100%;
+  background-color: #f2f2f2;
+  height: 0.05em;
+}
+
+
+
+#myTopnav{
+  background-color: black;
+  max-width: 100%;
+  height: 8em;
+  margin-left:0;
+  margin-right:0;
+  
 }
 
 .container .row a{
-    color: #f2f2f2;
-    text-align:center;
-    line-height: 6em;
-    font-size: 1.3em;
-    text-decoration: none;
+  color: #f2f2f2;
+  text-align:center;
+  line-height: 6em;
+  font-size: 1.3em;
+  text-decoration: none;
 }
 
 
 .container .row a#home{
-    line-height:2.5em;
-    font-size: 1.5em;
-    font-weight: bold;
+  line-height:2.5em;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .container .row a:hover,.container .row a:active{
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
-hr{
-    width: 100%;
-    background-color: #f2f2f2;
-    height: 0.05em;
+
+@media screen and (max-width: 600px) {
+.container .row a:not(:first-child ){display: none;}
+.container .row a#icon {
+  float: right;
+  display: block;
+  font-size: x-large;
+  line-height: 3.2em;
+}
 }
 
-/* Hide the link that should open and close the topnav on small screens */
-.container .row a.icon {
-    display: none;
-  }
+@media screen and (min-width: 601px){
+.container .row a#icon{
+  display: none;
+}
+}
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home").
- Show the link that contains should open and close the topnav (.icon) */
+/*Open the hamburger menu for the small screens*/
 @media screen and (max-width: 600px) {
-    .container .row a:not(:first-child) {display: none;}
-     .container .row a.icon {
-      float: right;
-      display: block;
-    }
-  }
+.container.responsive .row a#icon {
+  position: relative;
+  right: 0;
+  top: 0;
+  text-align: left;
+}
+.container.responsive .row a {
+  float: right;
+  display: block;
+  text-align: right;
+}
+}
 
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon.
-   This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-    .container.responsive .row{position: relative;}
-    .container.responsive .row a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .container.responsive .row a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
+.c-item {
+  height: 91.5vh;
+}
+
+.c-img {
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(0.6);
+}
+
+#self1 img{
+  max-width: 18em;
+  float:left;
+  margin-right:5em;
+}
+
+article{
+  display: block;
+  justify-content: center;
+  align-items: center;
+  margin-left:15em;
+}
+
+.container#self1 .text p{
+  color: rgb(220, 203, 203);
+  font-size: 1.5em;
+  margin-top:8em;
+  width: 75%;
+}
+
+.container#self1{
+  margin:10em auto;
+  width: 65%;
+}
+
+.container#self2{
+  margin:10em auto;
+  margin-left:23em;
+  width:50%;
+}
+
+.container#self1 .text a{
+  color: rgb(220, 203, 203);
+  font-size: small;
+  font-style: italic;
+  text-decoration: none;
+  
+}
+
+.container#self1 .text a:hover,.container#self2 .text a:hover{
+  text-decoration: underline;
+}
+
+#self2 img{
+  max-width: 20em;
+  float:right;
+  margin-left:0em;
 
 
+}
+
+.container#self2 .text a{
+  text-decoration: none;
+  color: rgb(220, 203, 203);
+  margin-top:3em;
+  font-style: italic;
+}
 
 
+.container#self2 .text p{
+  color: rgb(220, 203, 203);
+  font-size: 1.5em;
+  padding-top: 2em;
+}
 
+.container#self2 .text{
+  width:50%;
+}
+
+.container#self2{
+  margin-top:0.5em;
+}
+
+.container#self1{
+  margin-bottom:0;
+}
+
+.container#self1 p#portait1{
+  color: rgb(220, 203, 203);
+  margin-top:2em;
+
+}
+
+.container#self2 p#portait2{
+  color: rgb(220, 203, 203);
+  float: right;
+  margin-right: 3.5em;
+
+}
+
+.column{
+  flex:33.33%;
+  padding:0px;
+
+}
+
+.row#erga{
+  display: flex;
+  box-sizing: border-box;
+}
+
+.column#first{
+  padding-right: 0;
+
+}
+
+.column#second{
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.column#third{
+  padding-left: 0;
+}
+
+.top-left{
+  position: absolute;
+  top:1550px;
+  left:16px;
+  color: #000000;
+  font-size: 5em;
+  font-style: italic;
+}
+
+.centered {
+  position: absolute;
+  top:2030px;
+  right:46%;
+  font-size: 2em;
+
+}
+
+.centered a{
+  color:#f2f2f2;
+  text-decoration: none;
+  font-style: italic;
+}
+
+.centered a:hover{
+  text-decoration: underline;
+}
+
+.column:hover,.centered a{
+  transform: scale(1.05);
+}
