--- a/style.css
+++ b/style.css
@@ -68,43 +68,6 @@ nav a:hover::after {
     display: none;
 }
 
-/* nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    border: 2px solid black; 
-    height: 8.5vh;
-    background-color: black;
-    width: 80%;
-    margin: auto;
-}
-
-header {
-    height: 8.5vh;
-    background-color: black;
-}
-
-nav ul {
-
-    color: white;
-    border: 2px solid white; 
-    list-style-type: none;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-content: center;
-    flex-grow: 1;
-    padding: 0;
-    margin: 0;
-}
-
-li {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 10pt;
-} */
-
-
 .header {
     position: absolute;
     top: 0;
@@ -133,22 +96,6 @@ li {
     right: 5%;
 }
 
-/* .logo {
-    color: white;
-    border: 2px solid white; 
-    flex-grow: 1;
-    text-align: center;
-    font-size: 20px; 
-    align-content: center;
-    justify-content: center;
-    padding: 0;
-    line-height: 3;
-} */
-
-
-
-
-
 
 .c-item {
     height: 100vh;
@@ -167,6 +114,37 @@ li {
 .black {
     background-color: black;
 }
+
+
+.art {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.img-container {
+    width: 33.33%;
+    overflow: hidden;
+}
+
+.img-container img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    transition: 0.3s ease-in-out;
+}
+
+
+.img-container img:hover {
+
+    transform: scale(1.2);
+    object-fit: cover;
+    filter: blur(2px);
+
+}
+
+
+
 
 
 @media (max-width:1000px) {
