--- a/main_style.css
+++ b/main_style.css
@@ -94,6 +94,73 @@ body{
   margin-right:5em;
 }
 
+/*About us*/
+#us{
+  margin-top: 6em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 65%;
+}
+
+#us-text{
+  display: block;
+}
+#us p#paula, #skopos p#paula2{
+  color: #dc614c;
+  font-size: x-large;
+}
+
+#us h1, #skopos h1{
+  color: #f2f2f2;
+}
+
+#us p#paula, #us h1{
+  display: inline;
+}
+
+#skopos p#paula2, #skopos h1{
+  display: inline;
+}
+
+#us p, #skopos p{
+  color: #f2f2f2;
+  font-size: small;
+  margin-top: 1em;
+}
+
+#quote{
+  margin-left: 8em;
+  font-style: italic;
+  color: #ebdcdc;
+  border-style: double;
+}
+
+#quote p{
+  padding-top: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 1em;
+}
+
+#skopos{
+  margin-top: 3em;
+  margin-bottom: 4em;
+}
+
+#first-sep, #sec-sep{
+  background-color: white ;
+  width: 75%;
+  margin: 0 auto;
+}
+
+.seperator#first-sep{
+  margin-top: 5em;
+}
+
+
+/*Biography*/
+
 .container#self1,.container#self2{
   display: flex;
   justify-content: center;
@@ -177,69 +244,139 @@ article .container#self2 #img2{
 
 }
 
+/*Upcoming Events*/
+
+#up-events h1{
+  color:#f2f2f2;
+  margin-left:1em;
+
+}
+
+#up-events a{
+  color:#f2f2f2;
+  font-size: small;
+  font-style: italic;
+  text-decoration: none;
+}
+
+#up-events a:hover{
+  text-decoration: underline;
+}
+
+#up-events #events-title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left:0;
+}
+
+#events-title a{
+  color:#dc614c;
+}
+
+#up-events .seperator{
+  background-color: #f2f2f2;
+  width: 100%;
+}
+
+.container#events-body{
+  display:flex;
+  justify-content: center;
+  margin-top: 3em;
+
+}
+
+#events-body .first-date,#events-body .second-date{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:#dc614c;
+  margin-top: 2em;
+}
+
+#events-body .number{
+  flex:66%;
+  font-size: 5em;
+}
+
+.day{
+  font-size: medium;
+  padding-left: 1em;
+  line-height: 1em;
+}
+
+#events-body #hundred-erga img{
+  max-width: 40em;
+}
+
+#events-body #hundred-erga{
+  padding-left: 5em;
+}
+
+#events-body #hundred-erga h4{
+  color: #f2f2f2;
+  font-style: italic;
+  padding-bottom: 1em;
+  padding-left: 4em;
+}
+
+#events-body #hundred-erga p{
+  color: #f2f2f2;
+  font-size: 1.5em;
+  padding-top: 0.5em;
+}
+
+#events-body #hundred-erga a, #events-body #afierwma a{
+  color: #f2f2f2;
+  text-decoration: none;
+  padding-top: 0.5em;
+}
+
+#events-body #hundred-erga a:hover, #events-body #afierwma a:hover {
+  text-decoration: underline;
+}
+
+#events-body #afierwma{
+  padding-left: 5em;
+}
+
+#events-body #afierwma h4{
+  color:#f2f2f2;
+}
+
+#events-body #afierwma img{
+  max-width: 20em;
+  padding-top: 1em;
+}
+
+#events-body #paul-text{
+  color:#f2f2f2;
+  font-size: 1.5em;
+  padding-left: 2em;
+  padding-top: 5em;
+}
+
+#events-body #sec-date{
+  padding-left: 8em;
+}
+
+/*rensposivity*/
 @media screen and (max-width: 800px){
-  .container#self1,.container#self2{
+  .container#self1,.container#self2, #us{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
   }
-  
 
 }
 
-.column{
-  flex:33.33%;
-  padding:0px;
-
+@media screen and (max-width: 1100px){
+.container#events-body{
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  display: block;
+  }
 }
 
-.row#erga{
-  display: flex;
-  box-sizing: border-box;
-}
-
-.column#first{
-  padding-right: 0;
-
-}
-
-.column#second{
-  padding-right: 0;
-  padding-left: 0;
-}
-
-.column#third{
-  padding-left: 0;
-}
-
-.top-left{
-  position: absolute;
-  top:1550px;
-  left:16px;
-  color: #000000;
-  font-size: 5em;
-  font-style: italic;
-}
-
-.centered {
-  position: absolute;
-  top:2030px;
-  right:46%;
-  font-size: 2em;
-
-}
-
-.centered a{
-  color:#f2f2f2;
-  text-decoration: none;
-  font-style: italic;
-}
-
-.centered a:hover{
-  text-decoration: underline;
-}
-
-.column:hover,.centered a{
-  transform: scale(1.05);
-}
