--- a/main_style.css
+++ b/main_style.css
@@ -282,7 +282,7 @@ article .container#self2 #img2{
 .container#events-body{
   display:flex;
   justify-content: center;
-  margin-top: 3em;
+  margin-top: 7em;
 
 }
 
@@ -342,6 +342,7 @@ article .container#self2 #img2{
 
 #events-body #afierwma h4{
   color:#f2f2f2;
+  font-style: italic;
 }
 
 #events-body #afierwma img{
@@ -360,6 +361,10 @@ article .container#self2 #img2{
   padding-left: 8em;
 }
 
+#events-body #first-exhibition, #events-body #sec-exhibition{
+  display: flex
+}
+
 /*rensposivity*/
 @media screen and (max-width: 800px){
   .container#self1,.container#self2, #us{
@@ -371,12 +376,18 @@ article .container#self2 #img2{
 
 }
 
-@media screen and (max-width: 1100px){
-.container#events-body{
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  display: block;
+@media screen and (max-width: 1000px){
+  .container#events-body{
+    display:block;
+    width: 100%;
   }
-}
 
+  .container#events-body #sec-exhibition{
+    margin-top: 5em;
+  }
+
+  .container#events-body #sec-exhibition .date{
+     padding-left: 0;
+  }
+
+}
