--- a/style.css
+++ b/style.css
@@ -69,11 +69,11 @@ nav a:hover::after {
 }
 
 .header {
-    position: absolute;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
-    height: 12vh;
+    height: 80px;
     padding-left: 10%;
     padding-right: 10%;
     background: rgb(24, 24, 24);
@@ -82,8 +82,8 @@ nav a:hover::after {
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
-    box-shadow: 10px 5px 20px 1px black;
-    /* border-bottom: 0.1px solid white; */
+    /* box-shadow: 10px 5px 20px 1px black; */
+    border-bottom: 0.1px solid white;
 
 }
 
@@ -98,7 +98,7 @@ nav a:hover::after {
 
 
 .c-item {
-    height: 100vh;
+    height: 93vh;
 }
 
 .c-img {
@@ -117,19 +117,29 @@ nav a:hover::after {
 
 
 .art {
-    display: flex;
-    flex-direction: row;
 
+
+    background-color: black;
+
+    height: 93vh;
 }
 
 .img-container {
-    width: 33.33%;
+    width: 25%;
     overflow: hidden;
+
+}
+
+.art-container {
+    margin-top: 4%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .img-container img {
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     object-fit: cover;
     transition: 0.3s ease-in-out;
 }
@@ -139,12 +149,48 @@ nav a:hover::after {
 
     transform: scale(1.2);
     object-fit: cover;
-    filter: blur(2px);
+    filter: blur(0px);
 
 }
 
+.see-more {
+    display: block;
+    margin: auto;
+    margin-top: 7%;
+    color: orange;
+    border: 2px solid orange;
+    width: 7%;
+    height: 5%;
+    border-radius: 4px;
+    background-color: black;
+    transition: 0.3s;
+    font-weight: 600;
 
 
+
+}
+
+.see-more:hover {
+    transform: translateY(-0.24em);
+    box-shadow: 0 0.5em 0.5em -0.4em;
+
+}
+
+.header>.logo {
+    color: white;
+}
+
+.art h3 {
+    padding: 3%;
+    padding-bottom: 1%;
+    color: white;
+    padding-left: 2%;
+    border-bottom: 1px solid white;
+    width: 87.5%;
+    margin-left: auto;
+    margin-right: auto;
+    font-style: italic;
+}
 
 
 @media (max-width:1000px) {
@@ -174,13 +220,17 @@ nav a:hover::after {
         display: block;
     }
 
+    #check:checked~.header>.logo {
+        display: none;
+    }
+
     nav {
         position: absolute;
         top: 100%;
         left: 0;
         width: 100%;
         height: 0vh;
-        background-color: black;
+        background-color: rgb(24, 24, 24);
         z-index: 100;
         display: flex;
         flex-direction: column;
@@ -212,6 +262,10 @@ nav a:hover::after {
 
     nav a:first-child {
         padding-top: 0%;
+    }
+
+    #check:checked~.header>.logo {
+        content: none;
     }
 
 
