--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 
+:root {
+    font-size: 10px;
+}
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: Inter, sans-serif;
+
 }
+
 
 .logo {
     flex-grow: 1;
+    background-color: rgb(24, 24, 24);
 }
 
 nav {
@@ -19,6 +25,8 @@ nav {
     flex-wrap: nowrap;
     justify-content: space-evenly;
     flex-grow: 1;
+    font-size: 16px;
+    background-color: rgb(24, 24, 24);
 }
 
 nav a {
@@ -84,12 +92,13 @@ nav a:hover::after {
     flex-wrap: nowrap;
     /* box-shadow: 10px 5px 20px 1px black; */
     border-bottom: 0.1px solid white;
+    font-size: 16px;
 
 }
 
 .icons {
     position: absolute;
-    font-size: 2.5rem;
+    font-size: 4rem;
     color: white;
     cursor: pointer;
     display: none;
@@ -107,6 +116,18 @@ nav a:hover::after {
     filter: brightness(0.6);
 }
 
+.carousel-caption h5,
+.carousel-caption h6 {
+    font-size: 20px;
+
+}
+
+.carousel-caption button {
+    font-size: 16px;
+    margin-top: 1%;
+    margin-bottom: 3%;
+}
+
 .container {
     width: 10%;
 }
@@ -115,13 +136,10 @@ nav a:hover::after {
     background-color: black;
 }
 
-
 .art {
-
-
     background-color: black;
-
     height: 93vh;
+    font-size: 16px;
 }
 
 .img-container {
@@ -144,7 +162,6 @@ nav a:hover::after {
     transition: 0.3s ease-in-out;
 }
 
-
 .img-container img:hover {
 
     transform: scale(1.2);
@@ -156,17 +173,15 @@ nav a:hover::after {
 .see-more {
     display: block;
     margin: auto;
-    margin-top: 7%;
-    color: orange;
-    border: 2px solid orange;
-    width: 7%;
-    height: 5%;
+    margin-top: 5%;
+    color: #dc614c;
+    border: 2px solid #dc614c;
+    width: 11.2rem;
+    height: 4.8rem;
     border-radius: 4px;
     background-color: black;
     transition: 0.3s;
     font-weight: 600;
-
-
 
 }
 
@@ -190,7 +205,320 @@ nav a:hover::after {
     margin-left: auto;
     margin-right: auto;
     font-style: italic;
+    font-size: 30px;
 }
+
+
+/*About us*/
+.sxetika-me-emas {
+    background-color: black;
+    padding-top: 3%;
+}
+
+#us {
+    margin-top: 0em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 65%;
+    padding-bottom: 5em;
+}
+
+#us-text {
+    display: block;
+}
+
+#us p#paula,
+#skopos p#paula2 {
+    color: #dc614c;
+    font-size: x-large;
+}
+
+#us h1,
+#skopos h1 {
+    color: #f2f2f2;
+}
+
+#us p#paula,
+#us h1 {
+    display: inline;
+}
+
+#skopos p#paula2,
+#skopos h1 {
+    display: inline;
+}
+
+#us p,
+#skopos p {
+    color: #f2f2f2;
+    font-size: small;
+    margin-top: 1em;
+}
+
+#quote {
+    margin-left: 8em;
+    font-style: italic;
+    color: #ebdcdc;
+    border-style: double;
+}
+
+#quote p {
+    padding-top: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-bottom: 1em;
+}
+
+#skopos {
+    margin-top: 3em;
+    margin-bottom: 4em;
+}
+
+#first-sep,
+#sec-sep {
+    background-color: white;
+    width: 75%;
+    margin: 0 auto;
+}
+
+/* .seperator#first-sep {
+    margin-top: 0em;
+    background-color: black;
+} */
+
+
+/*Biography*/
+
+.bio {
+    background-color: black;
+}
+
+
+#self1 img {
+    max-width: 18em;
+    float: left;
+    margin-right: 5em;
+}
+
+.container#self1,
+.container#self2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 55%;
+}
+
+
+.container#self1 {
+    margin-top: 0em;
+}
+
+
+.container#self1 .text p {
+    color: rgb(220, 203, 203);
+    font-size: 1.5em;
+    flex: 50%;
+}
+
+
+.container#self1 #img1 p {
+    padding-top: 22em;
+
+}
+
+.container#self2 .text p {
+    color: rgb(220, 203, 203);
+    font-size: 1.5em;
+    margin-bottom: 8em;
+    flex: 45%;
+}
+
+
+.container#self1 .text a {
+    color: rgb(220, 203, 203);
+    font-size: small;
+    font-style: italic;
+    text-decoration: none;
+
+}
+
+.container#self1 .text a:hover,
+.container#self2 .text a:hover {
+    text-decoration: underline;
+}
+
+#self2 img {
+    max-width: 20em;
+    float: right;
+    margin-left: 5em;
+
+}
+
+
+article .container#self2 #img2 {
+    padding-bottom: 0em;
+}
+
+.container#self2 .text a {
+    text-decoration: none;
+    color: rgb(220, 203, 203);
+    margin-top: 3em;
+    font-style: italic;
+}
+
+
+.container#self1 {
+    margin-bottom: 0;
+}
+
+.container#self1 p#portait1 {
+    color: rgb(220, 203, 203);
+    margin-top: 2em;
+
+}
+
+.container#self2 p#portait2 {
+    color: rgb(220, 203, 203);
+    float: right;
+    margin-right: 3.5em;
+    margin-top: 1em;
+
+}
+
+
+/*Upcoming Events*/
+
+#up-events {
+    background-color: black;
+    padding: 5em;
+}
+
+
+#up-events h1 {
+    color: #f2f2f2;
+    margin-left: 1em;
+
+}
+
+#up-events a {
+    color: #f2f2f2;
+    font-size: small;
+    font-style: italic;
+    text-decoration: none;
+}
+
+#up-events a:hover {
+    text-decoration: underline;
+}
+
+#up-events #events-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 0;
+}
+
+#events-title a {
+    color: #dc614c;
+}
+
+#up-events .seperator {
+    background-color: #f2f2f2;
+    width: 100%;
+}
+
+.container#events-body {
+    display: flex;
+    justify-content: center;
+    margin-top: 7em;
+
+}
+
+#events-body .first-date,
+#events-body .second-date {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #dc614c;
+    margin-top: 2em;
+}
+
+#events-body .number {
+    flex: 66%;
+    font-size: 5em;
+}
+
+.day {
+    font-size: medium;
+    padding-left: 1em;
+    line-height: 1em;
+}
+
+#events-body #hundred-erga img {
+    max-width: 40em;
+}
+
+#events-body #hundred-erga {
+    padding-left: 5em;
+}
+
+#events-body #hundred-erga h4 {
+    color: #f2f2f2;
+    font-style: italic;
+    padding-bottom: 1em;
+    padding-left: 4em;
+}
+
+#events-body #hundred-erga p {
+    color: #f2f2f2;
+    font-size: 1.5em;
+    padding-top: 0.5em;
+}
+
+#events-body #hundred-erga a,
+#events-body #afierwma a {
+    color: #f2f2f2;
+    text-decoration: none;
+    padding-top: 0.5em;
+}
+
+#events-body #hundred-erga a:hover,
+#events-body #afierwma a:hover {
+    text-decoration: underline;
+}
+
+#events-body #afierwma {
+    padding-left: 5em;
+}
+
+#events-body #afierwma h4 {
+    color: #f2f2f2;
+    font-style: italic;
+}
+
+#events-body #afierwma img {
+    max-width: 20em;
+    padding-top: 1em;
+}
+
+#events-body #paul-text {
+    color: #f2f2f2;
+    font-size: 1.5em;
+    padding-left: 2em;
+    padding-top: 5em;
+}
+
+#events-body #sec-date {
+    padding-left: 8em;
+}
+
+#events-body #first-exhibition,
+#events-body #sec-exhibition {
+    display: flex
+}
+
+
 
 
 @media (max-width:1000px) {
@@ -268,5 +596,38 @@ nav a:hover::after {
         content: none;
     }
 
+    .see-more {
+        margin-top: 15%;
+        transform: scale(0.9);
+    }
+
+}
+
+@media screen and (max-width: 800px) {
+
+    .container#self1,
+    .container#self2,
+    #us {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 1000px) {
+    .container#events-body {
+        display: block;
+        width: 100%;
+    }
+
+    .container#events-body #sec-exhibition {
+        margin-top: 5em;
+    }
+
+    .container#events-body #sec-exhibition .date {
+        padding-left: 0;
+    }
 
 }
