--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav a:hover::after {
 
 .art {
     background-color: black;
-    height: 93vh;
+    height: 92vh;
     font-size: 16px;
 }
 
@@ -214,7 +214,8 @@ nav a:hover::after {
 /*About us*/
 .sxetika-me-emas {
     background-color: black;
-    padding-top: 3%;
+    padding-top: 10%;
+    height: 100%;
 }
 
 #us {
@@ -266,10 +267,8 @@ nav a:hover::after {
 }
 
 #quote p {
-    padding-top: 1em;
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-bottom: 1em;
+    padding: 1em;
+
 }
 
 #skopos {
@@ -294,6 +293,9 @@ nav a:hover::after {
 
 .bio {
     background-color: black;
+    height: 100%;
+    border: 2px solid white;
+    display: block;
 }
 
 
