--- a/views/biography.hbs
+++ b/views/biography.hbs
@@ -1,42 +1,13 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Van Gogh Art Gallery</title>
     <link rel="stylesheet" href="bio_style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
-
-
-<body>
-    <header class="header">
-        <a href="" class="logo">LOGO</a>
-
-        <input type="checkbox" id="check">
-        <label for="check" class="icons">
-            <i class="bx bx-menu" id="menu-icon"></i>
-            <i class="bx bx-x" id="close-icon"></i>
-        </label>
-        <nav>
-            <a href="">βιογραφια</a>
-            <a href="">συλλογη</a>
-            <a href="">εισιτηρια</a>
-            <a href="">εκθεσεις</a>
-            <a href="">επικοινωνια</a>
-        </nav>
-    </header>
-
-    <section class="bio_main">
+   <section class="bio_main">
         <div class="early_art">
             <img src="http://www.vggallery.com/painting/f_0015a.jpg">
             <div class="overlay-text">
                 <h2><strong>Earliest Paintings</strong></h2>
                 <h3><strong>(1881-1883)</strong></h3>
-                <a href="bio_page1.html">Discover more-&gt;</a>
+                <a href="/biography/earliest-paintings">Discover more-&gt;</a>
             </div>
         </div>
 
@@ -45,7 +16,7 @@
             <div class="overlay-text">
                 <h2><strong>Nuenen / Antwerp</strong></h2>
                 <h3><strong>(1883-1886)</strong></h3>
-                <a href="bio_page_2.html">Discover more-&gt;</a>
+                <a href="/biography/nuenen">Discover more-&gt;</a>
             </div>
         </div>
 
@@ -54,7 +25,7 @@
             <div class="overlay-text">
                 <h2><strong>Paris</strong></h2>
                 <h3><strong>(1886-1888)</strong></h3>
-                <a href="bio_page3.html">Discover more-&gt;</a>
+                <a href="/biography/paris">Discover more-&gt;</a>
             </div>
         </div>
 
@@ -63,7 +34,7 @@
             <div class="overlay-text">
                 <h2><strong>Arles</strong></h2>
                 <h3><strong>(1888-1889)</strong></h3>
-                <a href="bio_page4.html">Discover more-&gt;</a>
+                <a href="/biography/arles">Discover more-&gt;</a>
             </div>
         </div>
 
@@ -72,7 +43,7 @@
             <div class="overlay-text">
                 <h2><strong>Saint-Remy</strong></h2>
                 <h3><strong>(1889-1890)</strong></h3>
-                <a href="bio_page5.html">Discover more-&gt;</a>
+                <a href="/biography/saint-remy">Discover more-&gt;</a>
             </div>
         </div>
 
@@ -81,13 +52,8 @@
             <div class="overlay-text">
                 <h2><strong>Auvers-sur-Oise</strong></h2>
                 <h3><strong>(1890)</strong></h3>
-                <a href="bio_page6.html">Discover more-&gt;</a>
+                <a href="/biography/auvers-sur-oise">Discover more-&gt;</a>
             </div>
         </div>
     </section>
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
