--- a/public/forma_epikoin.css
+++ b/public/forma_epikoin.css
@@ -191,15 +191,19 @@ nav a:hover::after {
 }
 
 /*forma epikoinwnias*/
-.forma{
-    height: 90vh;
+
+body{
     background-color: black;
+}
+
+.forma{
+    height: 110vh;
     padding-top: 3%;
 }
 
 .templ{
     width:40%;
-    height: 80vh;
+    height: 90vh;
     margin: 0 auto;
     background-color: black;
     border: 0.3em solid white;
@@ -273,6 +277,7 @@ nav a:hover::after {
         width: 90%;
     }
 
+
     .thema{
         width: 80%;
     }
@@ -288,7 +293,7 @@ nav a:hover::after {
     }
 }
 
-@media screen and (max-width: 1100px) and (min-width:851px){
+@media screen and (max-width: 1000px) and (min-width:851px){
     .templ{
         width: 60%;
     }
@@ -299,7 +304,7 @@ nav a:hover::after {
 
 }
 
-@media screen and (max-width: 1300px) and (min-width:1101px){
+@media screen and (max-width: 1300px) and (min-width:1001px){
 
     .thema{
         width: 80%;
