--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,7 +7,7 @@
             <i class="bx bx-x" id="close-icon"></i>
         </label>
         <nav>
-            <a href="">συλλογη</a>
+            <a href="/collection">συλλογη</a>
             <a href="/biography">βιογραφια</a>
             <a href="">εισιτηρια</a>
             <a href="">εκθεσεις</a>
