--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -9,7 +9,7 @@
         <nav>
             <a href="/collection">συλλογη</a>
             <a href="/biography">βιογραφια</a>
-            <a href="">εισιτηρια</a>
+            <a href="/tickets">εισιτηρια</a>
             <a href="">εκθεσεις</a>
             <a href="/communication">επικοινωνια</a>
         </nav>
