--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -66,7 +66,7 @@
 </section>
 
     <section class="collection">
-        <img src="https://iiif.micr.io/qDCTO/full/900,/0/default.webp" alt="">
+        <a href="/collection/leptomereies"><img src="https://iiif.micr.io/qDCTO/full/900,/0/default.webp" alt=""></a>
         <img src="https://iiif.micr.io/yzksg/full/900,/0/default.webp" alt="">
         <img src="https://iiif.micr.io/PoVJv/full/900,/0/default.webp" alt="">
         <img src="https://iiif.micr.io/HDzja/full/900,/0/default.webp" alt="">
