--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,7 +10,7 @@
             <a href="/collection">συλλογη</a>
             <a href="/biography">βιογραφια</a>
             <a href="/tickets">εισιτηρια</a>
-            <a href="">εκθεσεις</a>
+            <a href="/exhibitions">εκθεσεις</a>
             <a href="/communication">επικοινωνια</a>
         </nav>
     </header>
