--- a/views/collection-template.hbs
+++ b/views/collection-template.hbs
@@ -5,20 +5,16 @@
 
 <section class="collection-temp">
     <div class="details">
-        <h1>Wheatfield with Crows</h1>
-        <img src="https://iiif.micr.io/QHzII/full/1800,/0/default.webp">
-        <h4>Καλλιτέχνης: <span class="painter">Vincent van Gogh </span></h4>
-        <h4>Αριθμός έργου: <span class="id"></span></h4>
-        <h4>Χρονολογία: <span class="xronologia">Auvers-sur-Oise, July 1890</span></h4>
-        <h4>Τύπος καμβά: <span class="typos">oil on canvas</span></h4>
-        <h4>Διαστάσεις: <span class="diastaseis">50.5 cm x 103 cm</span></h4>
+        <h1>{{info.onoma}}</h1>
+        <img src={{info.link}}>
+        <h4>Καλλιτέχνης: <span class="painter">{{info.kallitexnis}} </span></h4>
+        <h4>Αριθμός έργου: <span class="id"></span>{{info.arithmos_ergou}}</h4>
+        <h4>Χρονολογία: <span class="xronologia">{{info.xronologia}}</span></h4>
+        <h4>Τύπος καμβά: <span class="typos">{{info.typos_kamva}}</span></h4>
+        <h4>Διαστάσεις: <span class="diastaseis">{{info.diastaseis}}</span></h4>
     </div>
 
     <div class="perigrafi">
-        <p>Wheatfield with Crows is one of Van Gogh's most famous paintings. It is often claimed that this was his very last work. The menacing sky, the crows and the dead-end path are said to refer to the end of his life approaching. But that is just a persistent myth. In fact, he made several other works after this one.
-
-Van Gogh did want his wheatfields under stormy skies to express 'sadness, extreme loneliness', but at the same time he wanted to show what he considered 'healthy and fortifying about the countryside'.
-
-Van Gogh used powerful colour combinations in this painting: the blue sky contrasts with the yellow-orange wheat, while the red of the path is intensified by the green bands of grass.</p>
+        <p>{{info.perigrafi}}</p>
     </div>
 </section>
