--- a/views/collection-template.hbs
+++ b/views/collection-template.hbs
@@ -1,6 +1,7 @@
 <head>
-    <link rel="stylesheet" href="collection-style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="collection-style.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <section class="collection-temp">
