--- a/views/partials/multiple_tickets.hbs
+++ b/views/partials/multiple_tickets.hbs
@@ -1,6 +1,6 @@
- <head>
+ {{!-- <head>
     <link rel="stylesheet" href="tickets_style.css">
-</head>
+</head> --}}
 
 <div class="multiple-ticket">
     <h4>Στοιχεία Επιπλέον Επισκέπτη</h4>
