--- a/public/tickets_style.css
+++ b/public/tickets_style.css
@@ -1,10 +1,12 @@
 body{
-    background-color: black;
+    background-color: black !important;
 }
 
 :root{
     font-size: 10px;
 }
+
+/*eisitiria*/
 
 .eisitiria{
     display: flex;
